--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/my_first_db
 spring.datasource.username=postgres
 spring.datasource.password=root
+
+server.port = 8080
+spring.application.name = ark-backend-employee
