--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ pluginManagement {
 		gradlePluginPortal()
 	}
 }
-rootProject.name = 'ark-backend-employee'
+rootProject.name = 'ark-backend-arkgroup'
